# workerskv.gui

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
.github/workflows/: ci.client.yml  ci.tauri.yml  release.yml
@types/: global.d.ts
public/: index.html
src/: events.ts  index.css  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs  redis.rs
src/lib/: events.ts  tauri.ts
src/lib/stores/: connections.ts
src/lib/tags/: Colors.svelte  Date.svelte  Input.svelte  Layout.svelte  Nickname.svelte  Value.svelte
src/lib/utils/: index.ts  kvn.ts  mime.ts  storage.ts
src/routes/: __layout.svelte  index.svelte  viewer.svelte
