[package]
name = "kv_gui"
version = "0.0.2"
description = "Dashboard GUI client for Workers KV Namespaces"
repository = "https://github.com/cloudflare/workerskv.gui"
authors = ["Luke Edwards"]
default-run = "kv_gui"
edition = "2018"
build = "src/build.rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.5", features = ["api-all", "menu"] }
redis = { version = "0.20", features = ["tokio-native-tls-comp"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
